第三阶段项目修改
项目测试

--- a/Code/DouYu直播/TRProject/Resource/Main.storyboard
+++ b/Code/DouYu直播/TRProject/Resource/Main.storyboard
@@ -595,7 +595,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="100" sectionFooterHeight="28" id="CxS-4y-Btb">
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.1910167264" green="0.91919228760000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <sections>
                             <tableViewSection id="AzL-5B-x19">
                                 <cells>
@@ -683,7 +683,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rpv-ug-T5m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="122" y="1735"/>
+            <point key="canvasLocation" x="150" y="1735"/>
         </scene>
         <!--推荐-->
         <scene sceneID="yio-q1-0r8">
